# PenHive

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  mine  mine.cpp  user.proto
doc/: ClassDiagram.uml  Sequence Diagram  Sequence Diagram3  class..drawio  deepseek copy.cpp  deepseek.cpp  deepseek.uml  install.sh  qme.cpp  read.me  vcpkg.json
include/API/: ApiModule.hpp  common.hpp
include/API/Views/: 404.html  cyperland.html
include/API/controllers/: VirtualMachineController.hpp
include/Core/concurrency/: EventDispatcher.hpp
include/Core/interfaces/: IAttribute.hpp  IDatabase.hpp  IXmlDefinitionBuilderBase.hpp
include/System/: Logger.hpp
include/Template/: Template.hpp
include/Utils/: Exception.hpp  Logger.hpp  Result.hpp
include/Virtualization/Storage/: VirtualMachineStorageManager.hpp
include/Virtualization/Utils/: VmException.hpp
include/Virtualization/builder/: VirtualMachineBuilder.hpp  VirtualMachineNicBuilder.hpp  VolumeDefinitionBuilder.hpp
include/Virtualization/vm/: VirtualMachine.hpp  VirtualMachineDisk.hpp  VirtualMachineNic.hpp  VirtualMachinePool.hpp  VirtualMachineTemplate.hpp
include/Virtualization/vmm/: HypervisorConnector.hpp  VirtualMachineConfig.hpp  VirtualMachineDriver.hpp  VirtualMachineFactory.hpp  VirtualMachineManager.hpp  VirtualMachinePool.hpp
include/resources/allocation/: CGroupManager.hpp
src/Core/concurrency/: EventDispatcher.cpp
src/Template/: Template.cpp
src/Tests/: CTestConfig.cmake
src/Virtualization/builder/: VirtualMachineBuilder.cpp  VirtualMachineNicBuilder.cpp
(+22 files in other folders)
